--- a/lw1/CMakeLists.txt
+++ b/lw1/CMakeLists.txt
@@ -3,4 +3,6 @@ project(lw1)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(lw1 main.cpp)
+add_executable(lw1 main.cpp
+        libs/files-hanlder.h
+        libs/files-hanlder.cpp)
