Сделал вывод файла со строками задом наперёд

--- a/lw1/CMakeLists.txt
+++ b/lw1/CMakeLists.txt
@@ -3,6 +3,10 @@ project(lw1)
 
 set(CMAKE_CXX_STANDARD 26)
 
+set(BOOST_ROOT /usr/include/boost)
+find_package(Boost REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+
 add_executable(lw1 main.cpp
-        libs/files-hanlder.h
-        libs/files-hanlder.cpp)
+        libs/files-handler.h
+        libs/files-handler.cpp)
