--- a/lw2/CMakeLists.txt
+++ b/lw2/CMakeLists.txt
@@ -4,7 +4,7 @@ project(lw2)
 set(CMAKE_CXX_STANDARD 26)
 
 add_executable(lw2 main.cpp
-        libs/Stack/Stack.cpp
-        libs/Stack/Stack.h
         libs/CodeAnalyzer/CodeAnalyzer.cpp
-        libs/CodeAnalyzer/CodeAnalyzer.h)
+        libs/CodeAnalyzer/CodeAnalyzer.h
+        libs/Stack/Stack.cpp
+        libs/Stack/Stack.h)
