feat: проектирую, настраиваю открытие файла

--- a/lw5/CMakeLists.txt
+++ b/lw5/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.29)
+cmake_minimum_required(VERSION 3.28.1)
 project(lw5)
 
 set(CMAKE_CXX_STANDARD 26)
 
 add_executable(lw5 main.cpp
         libs/BTree.cpp
-        libs/BTree.h
-        stash.cpp)
+        libs/BTree.h)
